<resources>
    <string name="app_name">Patient Care</string>

    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="all_services_are_reserved_for_homecare_app">All rights are reserved for this App</string>
    <string name="language_setting">Change Language</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="suc">Success !</string>
    <string name="pass_short">password too short</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_gender">Choose gender</string>
    <string name="register">Sign up</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="inv_phone">Invalid phone</string>

    <string name="perm_image_denied">Permission image denied</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="open">Opened</string>
    <string name="close">Closed</string>
    <string name="show_all">Show All</string>


    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your email address</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="time">time</string>
    <string name="age">age</string>
    <string name="date">date</string>

    <string name="address">address</string>
    <string name="select">select</string>

    <string name="user_not_found">User not found</string>
    <string name="name_or_phone_number">Name or Phone number</string>
    <string name="no_search_results">No search results</string>
    <string name="confirmation">Confirmation</string>
    <string name="new_date">New  Date</string>
    <string name="my_dates">My Dates</string>
    <string name="drug_name">Drug Name</string>
    <string name="change">Change</string>
    <string name="details">Details</string>
    <string name="no_dates_to_show">No dates to show</string>
    <string name="title">It\'s time</string>
    <string name="desc">You should take your drug</string>

</resources>
